<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@color/gray_background">
    <com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="52dp" android:background="@color/pink_primary" app:menu="@menu/menu_catalogo" app:navigationIcon="@drawable/ic_arrow_back" app:title="@string/catalogo" app:titleTextColor="@color/white" />
    <com.google.android.material.chip.ChipGroup android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="10dp" app:singleSelection="true">
        <com.google.android.material.chip.Chip android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/todas" />
        <com.google.android.material.chip.Chip android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/polos" />
        <com.google.android.material.chip.Chip android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pantalones" />
        <com.google.android.material.chip.Chip android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vestidos" />
    </com.google.android.material.chip.ChipGroup>
    <TextView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:gravity="center" android:text="@string/lista_vacia" android:textColor="@color/gray_text" />
</LinearLayout>
