<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@color/gray_background"><com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="52dp" android:background="@color/pink_primary" app:navigationIcon="@drawable/ic_arrow_back" app:title="@string/opcion_pedidos" app:titleTextColor="@color/white" /><com.google.android.material.button.MaterialButtonToggleGroup android:id="@+id/toggle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" app:singleSelection="true" app:selectionRequired="true"><com.google.android.material.button.MaterialButton android:id="@+id/btnPendientes" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/pendientes" android:checked="true" /><com.google.android.material.button.MaterialButton android:id="@+id/btnAtendidos" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/atendidos" /></com.google.android.material.button.MaterialButtonToggleGroup><FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"><androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingHorizontal="10dp" /><TextView android:id="@+id/tvVacio" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:text="@string/sin_pedidos" android:textColor="@color/gray_text" /></FrameLayout></LinearLayout>
