<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@color/gray_background"><com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="52dp" android:background="@color/pink_primary" app:navigationIcon="@drawable/ic_arrow_back" app:title="@string/carrito" app:titleTextColor="@color/white" /><FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"><androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="10dp" /><TextView android:id="@+id/tvVacio" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:text="@string/carrito_vacio" android:textColor="@color/gray_text" /></FrameLayout><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="14dp" android:text="@string/mantener_quitar" android:textColor="@color/gray_text" /><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="14dp"><TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="Total" android:textSize="18sp" /><TextView android:id="@+id/tvTotal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/pink_primary" android:textSize="21sp" android:textStyle="bold" /></LinearLayout><com.google.android.material.button.MaterialButton android:id="@+id/btnPedido" style="@style/ModaButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="14dp" android:layout_marginBottom="18dp" android:text="@string/hacer_pedido" /></LinearLayout>
