<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@color/gray_background">
    <com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="52dp" android:background="@color/pink_primary" app:navigationIcon="@drawable/ic_arrow_back" app:title="@string/opcion_ropa" app:titleTextColor="@color/white" app:menu="@menu/menu_ropa" />
    <com.google.android.material.textfield.TextInputLayout style="@style/Widget.Material3.TextInputLayout.OutlinedBox" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:hint="@string/buscar_ropa"><com.google.android.material.textfield.TextInputEditText android:id="@+id/etBuscar" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text" /></com.google.android.material.textfield.TextInputLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"><androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="10dp" /><TextView android:id="@+id/tvVacio" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:text="@string/sin_ropa" android:textColor="@color/gray_text" /></FrameLayout>
</LinearLayout>
